<resources>
    <string name="app_name">Demo Android App</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_world">Hello World</string>
    <string name="textview_and_edittext">TextView and EditText</string>
    <string name="email_floating_button">Floating Email</string>
    <string name="title_activity_basic">BasicActivity</string>
    <string name="provide_input">Provide Input</string>
    <string name="display_output">Display Output</string>
    <string name="textview">TextView</string>
    <string name="click_button">Click Button</string>
    <string name="reset_output_text">reset output text</string>
    <string name="move_to_main_activity">move to main activity</string>
    <string name="move_to_demo_activity">move to demo activity</string>
    <string name="move_to_basic_activity">move to basic activity</string>
    <string name="search_button">search</string>
    <string name="clear_search_button">clear</string>
    <string name="avatar_image">avatar image</string>
    <string name="title_activity_demo">DemoActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    collect activity    -->
    <string name="title_activity_collect">CollectActivity</string>
    <string name="move_to_upsert_activity">Upsert Activity Demo</string>
    <string name="submit">Submit</string>


</resources>